crates/oxc_css_parser/tests/error/scss/value/expression.snap
---
source: crates/oxc_css_parser/tests/error.rs
---
error: component value is expected
  ┌─ expression.scss:1:7
  │
1 │ a {a: .}
  │       ^


